fixing heergement on mobile?

--- a/style.css
+++ b/style.css
@@ -237,6 +237,8 @@ nav {
 .hebergement-card a {
     text-decoration: underline;
     color: #2f3c36;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
 
 .hebergement-card ul {
